add --serial documentation to manpage

--- a/rootstock.1
+++ b/rootstock.1
@@ -73,6 +73,10 @@ Timezone for the system (i.e. Europe/Berlin)
 Language used in the installed system (i.e. en_US.UTF\-8)
 (default: buildsystem locale)
 .PP
+\fB\-\-serial\fR
+.IP
+Create a serial tty inside the image for serial consoles
+.PP
 keyboard options:
 .PP
 \fB\-\-kblayout\fR <layout>
