document --dist option in manpage

--- a/rootstock.1
+++ b/rootstock.1
@@ -63,6 +63,11 @@ apt mirror to use (i.e. http://ports.ubuntu.com/ubuntu\-ports)
 Archive components
 (default: main,universe)
 .PP
+\fB\-d\fR \fB\-\-dist\fR jaunty or karmic
+.IP
+Specify release to build
+(default: karmic)
+.PP
 \fB\-t\fR \fB\-\-timezone\fR <timezone>
 .IP
 Timezone for the system (i.e. Europe/Berlin)
