Document --script in manpage

--- a/rootstock.1
+++ b/rootstock.1
@@ -78,6 +78,10 @@ Timezone for the system (i.e. Europe/Berlin)
 Language used in the installed system (i.e. en_US.UTF\-8)
 (default: buildsystem locale)
 .PP
+\fB\-\-script\fR <filename>
+.IP
+Run this script at the end of the installation process
+.PP
 \fB\-\-serial\fR <devicename>
 .IP
 Create a serial tty of <devicename> inside the image for serial consoles
