add manpage entry for manifest file feature

--- a/rootstock.1
+++ b/rootstock.1
@@ -53,6 +53,10 @@ List of packages to install (i.e. ubuntu\-desktop)
 Size of the target filesystem to be created (i.e. 500M)
 (default: 1G)
 .PP
+\fB\-g\fR \fB\-\-manifest\fR <path to manifest file>
+.IP
+Supply a list of packages to be installed from a manifest file
+.PP
 \fB\-m\fR \fB\-\-mirror\fR <url>
 .IP
 apt mirror to use (i.e. http://ports.ubuntu.com/ubuntu\-ports)
